# RAG

./: .env.example  .gitignore  LICENSE  README.md  agent_out2.txt  agent_output.txt  agent_test_req.json  alembic.ini  campus_assistant_arch.md  pyproject.toml  requirements-cu128.txt  requirements-cu130.txt  requirements.txt  start.bat  start.ps1  stop.bat
.github/: CODEOWNERS
.sisyphus/: boulder.json
.sisyphus/drafts/: rag-integration.md
.sisyphus/plans/: rag-integration.md
ai_service/: benchmark.py  cli.py  main.py  requirements.txt
ai_service/data/: faiss.index  metadata.json
ai_service/engine/: chunker.py  embedding.py  generator.py  loader.py  pipeline.py  prompts.py  retriever.py  vector_store.py
backend/: init_db.sql  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  cli.py  config.py  database.py  disk_cache.py  main.py  models.py  rag_engine.py  redis_client.py  security.py  smoke.py  utils.py
backend/migrations/: 001_init_campus_schema.sql
backend/scripts/: build_index.py  clean_knowledge.py
backend/tests/: conftest.py  test_answer_corrections.py  test_answer_knowledge.py  test_api.py  test_config.py  test_document_api.py  test_documents.py  test_rag_units.py  test_web_search.py
campus-backend/: pom.xml
campus-backend/campus-auth/: pom.xml
campus-backend/campus-gateway/: pom.xml
campus-backend/sql/: init.sql  migrate-knowledge-to-python.sql  upgrade-guest-mode.sql
campus-frontend/: components.d.ts  index.html  login-reference-preview.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
campus-frontend/src/: App.vue  main.ts
docs/: agent_roadmap.md  api.md  architecture.md  demo_and_defense.md  evaluation_dense.json  evaluation_generation_sample.json  evaluation_hybrid.json  evaluation_report.json  evaluation_rerank_192.json  evaluation_rerank_full.json  evaluation_summary.md  project_journal.md  testing.md
evals/: campus_qa.jsonl  run_eval.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+4 more)
scripts/: check_models.py  check_secrets.py  clean_knowledge.py  migrate_legacy_qa.py  start.py  start.sh
(+1054 files in other folders)
